Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-95379

typo - missing comma in doc

XMLWordPrintable

    • All
    • 017eb5627b2389089c46d7f226f233651e7c0458 (qt/qtbase/dev) e208ea2d532440eb2e1d66b7bb539dc2a4ce2346 (qt/qtbase/6.2)
    • Da Vinci sprint 37

      https://doc.qt.io/qt-6/qstringlist.html#adding-strings

      "Strings can be added to a list using the insert() << missing comma>> append()

      Add comma after insert().

        For Gerrit Dashboard: QTBUG-95379
        # Subject Branch Project Status CR V

            paulwicking Paul Wicking
            psnarf Henry Pfeil
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes