Doc: Add missing comma

Fixes: QTBUG-95379
Pick-to: 6.2
Change-Id: Ie66feccff27d055a4ebd4f7b26313910934ad234
Reviewed-by: Nico Vertriest <nico.vertriest@qt.io>